feat(朋友页): 添加钨鸮的孤岛电台友链

--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -152,6 +152,13 @@ import { Icon } from "astro-icon/components";
                 </div>
                 <div class="text-sm text-black/50 dark:text-white/50">https://nyayurin.github.io/Yutori-Docs/</div>
             </a>
+            <a href="https://blog.2w2.top" target="_blank" class="friend-card">
+                <div class="flex items-center gap-2">
+                    <img src="https://blog.2w2.top/img/avatar.webp"  class="w-5 h-5 rounded"/>
+                    <div class="font-bold text-black dark:text-white">钨鸮的孤岛电台</div>
+                </div>
+                <div class="text-sm text-black/50 dark:text-white/50">钨在所有金属中排名第七，因此这是一只重磅鸮</div>
+            </a>
             <a href="https://forum.naixi.net/" target="_blank" class="friend-card">
                 <div class="flex items-center gap-2">
                     <img src="https://forum.naixi.net/favicon.ico"  class="w-5 h-5 rounded"/>
