--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,8 +21,6 @@ const currentYear = new Date().getFullYear();
         Was this helpful? 
         <a class="transition link text-[var(--primary)] font-medium" target="_blank" href=https://www.afo.im/posts/pin>Tell Me!</a> 
          or 
-        <a class="transition link text-[var(--primary)] font-medium" target="_blank" href=https://www.afo.im/donate/ >Donate now!</a> 
-        <br>
-        <a class="transition link text-[var(--primary)] font-medium" target="_blank" href=https://beian.miit.gov.cn >琼ICP备2024043793号-3</a> 
-    </div>
+        <a class="transition link text-[var(--primary)] font-medium" target="_blank" href=https://2x.nz/donate/ >Donate now!</a> 
+</div>
 </div>
