update: 博客已开源： https://github.com/afoim/fuwari

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,5 +17,8 @@ const currentYear = new Date().getFullYear();
         由
         <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://astro.build">Astro</a> 和
         <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://github.com/saicaca/fuwari">Fuwari</a> 强力驱动
+        <br>
+        本站已开源
+        <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://github.com/afoim/fuwari">源码</a>
 </div>
 </div>
