--- a/src/pages/donate.astro
+++ b/src/pages/donate.astro
@@ -136,7 +136,7 @@ import { Icon } from "astro-icon/components";
                 已赞助的小伙伴
             </h2>
             <p class="text-sm text-black/60 dark:text-white/60">
-            如果您已赞助，并且想加入赞助名单，请联系我，并发送标准格式的申请表，<a href="mailto:acofork@foxmail.com?subject=申请添加至赞助名单 - AcoFork Blog&body=用户名%EF%BC%9A%0A用户头像%EF%BC%88可选%EF%BC%89%EF%BC%9A%0A赞助金额%EF%BC%9A%0A赞助订单号%EF%BC%9A" class="transition link text-[var(--primary)] font-medium underline">点击这里发送</a>
+            如果您已赞助，并且想加入赞助名单，请自行提交PR <a target="_blank" href="https://github.com/afoim/fuwari/blob/main/src/pages/donate.astro">点击这里提交</a>
 
             </p>
             <br>
