--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -363,7 +363,7 @@ import { Icon } from "astro-icon/components";
                         将您的网站加入本站友链
                     </h2>
                     <p class="text-sm text-black/60 dark:text-white/60">
-                    请发送标准格式的申请表，<a href="mailto:acofork@foxmail.com?subject=申请友链 - AcoFork Blog&body=网站名称%EF%BC%9A%0A网站图标%EF%BC%88可选%EF%BC%89%EF%BC%9A%0A网站简介（可选）%EF%BC%9A%0A网站链接%EF%BC%9A%0A申请理由%EF%BC%9A%0A期望添加的次序（数字，从左到右）%EF%BC%9A" class="transition link text-[var(--primary)] font-medium underline">点击这里发送</a>
+                    请自行提交PR <a target="_blank" href="https://github.com/afoim/fuwari/blob/main/src/pages/friends.astro" class="transition link text-[var(--primary)] font-medium underline">点击这里提交</a>
         
                     </p>
                     <br>
