--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -397,6 +397,13 @@ import { Icon } from "astro-icon/components";
                 </div>
                 <div class="text-sm text-black/50 dark:text-white/50">一个内容成分复杂的博客小站。</div>
             </a>
+            <a href="https://blog.strarry.top/" target="_blank" class="friend-card">
+                <div class="flex items-center gap-2">
+                    <img src="https://blog.strarry.top/avatar.jpg" loading="lazy" class="w-5 h-5 rounded">
+                    <div class="font-bold text-black dark:text-white">星辰の笔记</div>
+                </div>
+                <div class="text-sm text-black/50 dark:text-white/50">Code | Think | Share | Repeat</div>
+            </a>
         </div>
 
         <!-- 申请友链 -->
