--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -28,7 +28,7 @@ import { Icon } from "astro-icon/components";
             </a>
             <a href="https://blog.isyyo.com/" target="_blank" class="friend-card">
                 <div class="flex items-center gap-2">
-                    <img src="https://blog.isyyo.com/upload/favicon.ico" loading="lazy" class="w-5 h-5 rounded">
+                    <img src="https://blog.isyyo.com/favicon/logo.png" loading="lazy" class="w-5 h-5 rounded">
                     <div class="font-bold text-black dark:text-white">Wer Blog</div>
                 </div>
                 <div class="text-sm text-black/50 dark:text-white/50">The only way to do great is to love what you do</div>
