--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -241,10 +241,10 @@ const bannerOffset =
 		<slot name="head"></slot>
 
 		<link rel="alternate" type="application/rss+xml" title={profileConfig.name} href={`${Astro.site}rss.xml`}/>
-		{/* <!-- Umami分析（自建） -->
-		<script defer src="https://umami.2x.nz/script.js" data-website-id="4b4e430d-a12c-4a5c-8cf9-df48eb20fd6d"></script> */}
-		<!-- Umami分析（云-备用） -->
-		<script defer src="https://cloud.umami.is/script.js" data-website-id="5d710dbd-3a2e-43e3-a553-97b415090c63" data-swup-ignore-script></script>
+		<!-- Umami分析（自建） -->
+		<script defer src="https://umami.2b2x.cn/script.js" data-website-id="5d710dbd-3a2e-43e3-a553-97b415090c63" data-swup-ignore-script></script>
+		{/* <!-- Umami分析（云-备用） -->
+		<script defer src="https://cloud.umami.is/script.js" data-website-id="5d710dbd-3a2e-43e3-a553-97b415090c63" data-swup-ignore-script></script> */}
 		<!-- 百度统计 -->
 <script data-swup-ignore-script>
 var _hmt = _hmt || [];
