--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -113,6 +113,10 @@ const bannerOffset =
 
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+        <link rel="preconnect" href="https://pic1.acofork.com" />
+        <link rel="preconnect" href="https://umami.acofork.com" />
+        <link rel="preconnect" href="https://support.nodeget.com" />
+		
 		<script src="/js/umami-share.js" defer></script>
 		<script data-swup-ignore-script src="https://pic1.acofork.com/random.js" defer></script>
 		
