perf: 优化图片加载性能与属性
- 为 PostCard 组件添加 loading 属性，支持 "eager" 或 "lazy" 加载
- 在文章列表页中，前两篇文章的图片使用 "eager" 加载以提升首屏体验
- 为 Profile、SideBar、Footer 等组件中的静态图片添加明确的 width、height、loading 和 decoding 属性，减少布局偏移
- 在 ImageWrapper 组件中传播 loading 属性，并为 "eager" 加载的图片设置 fetchpriority="high"

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -48,7 +48,7 @@ try {
         <a class="transition link text-black/30 dark:text-white/30 hover:text-[var(--primary)] text-xs ml-1" target="_blank" href={`https://github.com/afoim/fuwari/commit/${commitHash}`}>({commitHash} @ {buildDate})</a>
         <br>
 
-		<a class="transition link text-[var(--primary)] font-medium inline-flex items-center" href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank"><img alt="" src="/favicon/foot-icp.png" class="h-4 mr-1">皖ICP备2025099787号-2</a>
+		<a class="transition link text-[var(--primary)] font-medium inline-flex items-center" href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank"><img alt="" src="/favicon/foot-icp.png" width="16" height="16" class="h-4 mr-1">皖ICP备2025099787号-2</a>
         <br>
         <div class="server-info-container flex flex-col items-center justify-center gap-1 mt-1">
             <!-- Server info will be injected here -->
@@ -84,6 +84,8 @@ try {
 
             const iconImg = document.createElement('img');
             iconImg.className = 'server-icon h-4 ml-1 hidden';
+            iconImg.width = 16;
+            iconImg.height = 16;
             iconImg.alt = 'Server Icon';
             div.appendChild(iconImg);
 
