--- a/src/components/PostPage.astro
+++ b/src/components/PostPage.astro
@@ -11,7 +11,7 @@ const interval = 50;
 
 <div class="transition flex flex-col rounded-[var(--radius-large)] bg-transparent gap-4 mb-4">
 
-    {page.data.map((entry: CollectionEntry<"posts">) => (
+    {page.data.map((entry: CollectionEntry<"posts">, index) => (
         <div class="onload-animation" style={`animation-delay: calc(var(--content-delay) + ${delay++ * interval}ms);`}>
             <PostCard
                     entry={entry}
@@ -22,6 +22,7 @@ const interval = 50;
                     image={entry.data.image}
                     description={entry.data.description}
                     draft={entry.data.draft}
+                    loading={index < 2 ? "eager" : "lazy"}
             ></PostCard>
         </div>
     ))}
