--- a/src/components/widget/Profile.astro
+++ b/src/components/widget/Profile.astro
@@ -16,7 +16,7 @@ for (const post of posts) {
 ---
 <div class="card-base p-3 border border-black/10 dark:border-white/10">
     <div class="relative mx-auto mt-1 lg:mx-0 lg:mt-0 mb-3 max-w-[12rem] lg:max-w-none rounded-xl overflow-hidden" style={`--theme-hue: ${siteConfig.themeColor.hue}`}>
-        <img src={config.avatar} alt="Profile Image of the Author" class="w-full h-full object-cover transition duration-500" />
+        <img src={config.avatar} alt="Profile Image of the Author" class="w-full h-full object-cover transition duration-500" width="640" height="640" loading="eager" decoding="async" />
     </div>
     <div class="px-2">
         <div class="font-bold text-xl text-center mb-1 dark:text-neutral-50 transition">{config.name}</div>
