--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -199,19 +199,21 @@ const jsonLd = {
 
             
             <!-- Giscus 评论区 -->
-            <div id="giscus-container" class="giscus" data-swup-ignore-script
-                data-repo="afoim/giscus-fuwari"
-                data-repo-id="R_kgDOOi8quw"
-                data-category="Announcements"
-                data-category-id="DIC_kwDOOi8qu84CprDV"
-                data-mapping="pathname"
-                data-strict="1"
-                data-reactions-enabled="1"
-                data-emit-metadata="0"
-                data-input-position="top"
-                data-lang="zh-CN"
-                data-loading="lazy"
-            ></div>
+            <div id="giscus-container"
+                data-repo="XuexGao/Fuwari"
+                data-repo-id="R_kgDORKqH6w"
+    data-category="Announcements"
+    data-category-id="DIC_kwDORKqH684C2CSW"
+    data-mapping="pathname"
+    data-strict="0"
+    data-reactions-enabled="1"
+    data-emit-metadata="0"
+    data-input-position="bottom"
+    data-theme="preferred_color_scheme"
+    data-lang="zh-CN"
+    data-loading="lazy"
+    class="giscus"
+></div>
     <br>
 
     <div class="flex flex-col md:flex-row justify-between mb-4 gap-4 overflow-hidden w-full">
