fix: 添加域名重定向脚本确保流量指向主域名
当用户访问非主域名且使用默认端口时，自动重定向到主域名 https://2x.nz，以统一流量来源并避免内容重复。

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -121,6 +121,28 @@ const bannerOffset =
 		
 		<script src="/js/umami-share.js" defer></script>
 		<script data-swup-ignore-script src="https://p.2x.nz/random.js" defer></script>
+
+		<script>
+		(function () {
+		var hostname = location.hostname;
+		var port = location.port;
+
+		// 默认端口判断
+		var isDefaultPort =
+			port === "" || port === "80" || port === "443";
+
+		if (hostname !== "2x.nz" && isDefaultPort) {
+			location.replace(
+			"https://2x.nz" +
+			location.pathname +
+			location.search +
+			location.hash
+			);
+		}
+		})();
+		</script>
+
+
 		
 		
 		
