--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -128,9 +128,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <link rel="preconnect" href="https://support.nodeget.com" />
 		
 
-        <script src="/js/umami-share.js" defer></script>
-                <script data-swup-ignore-script src="https://p.2x.nz/random.js" defer></script>		
-		
 		
 		{/* <!-- Content Security Policy -->
 		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://giscus.app https://hpic.072103.xyz https://umami.2x.nz https://hm.baidu.com https://www.googletagmanager.com https://www.google-analytics.com https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net https://static.cloudflareinsights.com https://*.adtrafficquality.google; style-src 'self' 'unsafe-inline' https://giscus.app https://fonts.googleapis.com https://api.iconify.design; font-src 'self' https://fonts.gstatic.com https://api.iconify.design; img-src 'self' data: https: http:; connect-src 'self' https://umami.2x.nz https://hm.baidu.com https://www.google-analytics.com https://analytics.google.com https://api.iconify.design https://static.cloudflareinsights.com https://pic.2x.nz https://q2.qlogo.cn https://ep1.adtrafficquality.google https://googleads.g.doubleclick.net; frame-src 'self' https://giscus.app *.bilibili.com https://www.google.com https://googleads.g.doubleclick.net https://support.nodeget.com https://*.adtrafficquality.google; object-src 'none'; base-uri 'self'; form-action 'self';"> */}
@@ -281,7 +278,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		preferences_center_close_button_hide: false,
 		page_refresh_confirmation_buttons: false,
 		website_name: "AcoFork Blog",
-		website_privacy_policy_url: "https://acofork.com/posts/privacy-policy/",
+		website_privacy_policy_url: "/posts/privacy-policy/",
 	};
 
 	const markCookieConsentHeadAssetsPersistent = () => {
@@ -374,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
 
 <!-- Basic Analytics -->
-<script data-cookie-consent="strictly-necessary" data-swup-ignore-script defer src="https://t.2x.nz/tracker.js"></script>
+
 <!-- Umami -->
 <script type="text/plain" data-cookie-consent="strictly-necessary" defer src="https://cloud.umami.is/script.js" data-website-id="fc59d705-e252-4296-88c0-e37ef66e97c5" data-swup-ignore-script></script>
 <!-- end of Basic Analytics-->
@@ -414,8 +411,8 @@ var _hmt = _hmt || [];
 <!-- end of Site Experience & Interaction Analytics-->
 
 <!-- Google Adsense -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1683686345039700"
-     crossorigin="anonymous" data-swup-ignore-script></script>
+<script async src="https://pagead2.googlesyndication.com/... "
+     crossorigin="anonymous"></script>
 <!-- end of Google Adsense-->
 
 <noscript>Free cookie consent management tool by <a href="https://www.termsfeed.com/">TermsFeed</a></noscript>
