--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -239,6 +239,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 		<link rel="alternate" type="application/rss+xml" title={profileConfig.name} href={`${Astro.site}rss.xml`}/>
 
+<script is:inline data-swup-ignore-script src="https://p.2x.nz/random.js" defer></script>
+
 	</head>
 	<body class=" min-h-screen transition " class:list={[{"lg:is-home": isHomePage, "enable-banner": enableBanner}]}>
 
