--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -407,8 +407,7 @@ var _hmt = _hmt || [];
 <!-- end of Site Experience & Interaction Analytics-->
 
 <!-- Google Adsense -->
-<script async src="https://pagead2.googlesyndication.com/... "
-     crossorigin="anonymous" data-swup-ignore-script></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1683686345039700"></script>
 <!-- end of Google Adsense-->
 
 <noscript>Free cookie consent management tool by <a href="https://www.termsfeed.com/">TermsFeed</a></noscript>
